# indexing-system

./: .clang-format  .gitignore  CMakeLists.txt  README.md  conanfile.txt  requirements.txt
.github/workflows/: c-cpp.yml  python.yml
cmake/: definitions.cmake  dirs.cmake  libs.cmake  proto.cmake
cmake/protos/: index.cmake
cmake/utils/: append_strings.cmake  find_conan_packages.cmake  generate_grpc_source.cmake  generate_grpc_target.cmake
proto/: index.proto
pyclient/app/: main.py
pyclient/app/grpc_helpers/: index_client.py  utils.py
pyclient/app/input/: commands.py  processor.py
pyclient/app/utils/: check_address.py
server/: CMakeLists.txt
server/app/: CMakeLists.txt  main.cpp  service.cpp  service.h  service_base.cpp  service_base.h
server/app/details/: engine.cpp  engine.h  input_processor.cpp  input_processor.h  prepare_command.cpp  prepare_command.h  service_base.cpp  service_base.h  task_dispatcher.cpp  task_dispatcher.h
server/app/gtests/: CMakeLists.txt  check_host_address_tests.cpp  filenames_storage_tests.cpp  prepare_command_tests.cpp  to_user_string_tests.cpp
server/app/src/: CMakeLists.txt  main.cpp
server/app/src/engine/: engine.cpp  engine.h
server/app/src/grpc/: check_host_address.cpp  check_host_address.h  grpc_call_processor.h  grpc_error.h  grpc_server.cpp  grpc_server.h  index_service.cpp  index_service.h
server/app/src/grpc/converters/: index_holder_results.cpp  index_holder_results.h
server/app/src/index_holder/: add_root_result.h  file_info.h  filenames_storage.cpp  filenames_storage.h  get_roots_result.h  index_holder.cpp  index_holder.h  remove_root_result.h  root_index.cpp  root_index.h  root_index_creator.cpp  root_index_creator.h
server/app/src/index_holder/results/: add_root_result.h  get_files_result.h  get_roots_result.h  remove_root_result.h
server/app/src/input_processor/: commands_holder.cpp  commands_holder.h  input_processor.cpp  input_processor.h  prepare_command.cpp  prepare_command.h  prepare_filepath.cpp  prepare_filepath.h  string_processing.cpp  string_processing.h
server/app/src/input_processor/command_processor/: clear_processor.cpp  clear_processor.h  command_info.cpp  command_info.h  command_processor.h  help_processor.cpp  help_processor.h  index_processor.cpp  index_processor.h  prepare_filepath.cpp  prepare_filepath.h  quit_processor.cpp  quit_processor.h  remove_processor.cpp  remove_processor.h  roots_processor.cpp  roots_processor.h
server/app/src/misc/: benchmark.h  duration_to_string.cpp  duration_to_string.h  print_to_user.h  spinlock.cpp  spinlock.h
server/app/src/service/: service.cpp  service.h  service_base.cpp  service_base.h  service_configuration.h
server/app/src/task_dispatcher/: task_dispatcher.cpp  task_dispatcher.h
server/grpc-helpers/gtests/: CMakeLists.txt  check_host_address_tests.cpp
server/grpc-helpers/src/: CMakeLists.txt  check_host_address.cpp  grpc_call_processor.h
server/logger/: CMakeLists.txt  logger.cpp  logger.h  logger_defines.h
server/logger/details/: format_pattern.cpp
server/logger/gtests/: CMakeLists.txt  filename_tests.cpp  lambda_tests.cpp  simple_function_tests.cpp  template_function_tests.cpp
server/logger/gtests/details/: check_message.cpp  check_message.h
server/logger/src/: CMakeLists.txt  logger.cpp  logger.h  logger_defines.h  logger_levels.h
server/logger/src/details/: format_pattern.cpp  format_pattern.h
